# ecc-engine

./: .gitignore  README.md  pyproject.toml
ecc/: __init__.py  config.py
ecc/audit/: agent_audit.py  debt_scanner.py  failure_db.py  system_health_check.py
ecc/core/: agentshield_check.py  loader.py  orchestrator.py  pre_plan_validator.py  quality_gate.py  system_maturity.py  tri_role.py
ecc/evolution/: __init__.py  batch_induction.py  coding_evolve.py  decay_coding_patterns.py  ecc_benchmark.py  evolution_analyzer.py
ecc/instincts/: coding-patterns.yaml  coding_instinct_recommender.py  coding_scout.py  skill_trainer.py
ecc/review/: model_router.py  parallel_review.py
templates/prompts/: ARCH.md  CODE-QUALITY-REVIEWER.md  ENGINE.md  FINAL-REVIEW.md  PRE-PLAN-VALIDATION.md  README.md  RECEIVING-CODE-REVIEW.md  REVIEW.md  SPEC-REVIEWER.md  WRITING-PLANS.md
templates/rules/: 01-tri-role.md  02-no-conda.md  03-fail-soft.md  04-atomic-write.md  05-code-review-v4-pro.md  06-import-discipline.md  07-ponytail-comment.md
tests/: test_ecc_tools.py
