[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ecc-engine"
version = "2.9.1"
description = "Engineering Control Chain - Agent code quality assurance pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
ecc-review = "ecc.core.tri_role:main"
ecc-audit = "ecc.audit.agent_audit:main"
ecc-evolve = "ecc.evolution.evolution_analyzer:main"
ecc-debt = "ecc.audit.debt_scanner:main"
ecc-bench = "ecc.evolution.ecc_benchmark:main"
ecc-orch = "ecc.core.orchestrator:main"
ecc-shield = "ecc.core.agentshield_check:main"
ecc-parallel = "ecc.review.parallel_review:main"
